# toxic-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  config.yaml  docker-compose.yml  install-tools.sh  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
assets/docs/: RUBRIC.md  SCREENSHOTS.md
assets/mlflow/: mlflow.db
assets/mlflow/artifacts/1/models/m-817e0e476b0f427b873a41f8b4913a7f/artifacts/: MLmodel  conda.yaml
assets/mlflow/artifacts/1/models/m-960cd8cdbd6f407ba0fdc97153fd420b/artifacts/: MLmodel
assets/mlflow/artifacts/1/models/m-f687df49e8ea4157855c648d8efa6fc9/artifacts/: MLmodel  conda.yaml
assets/models/: toxic_model.pkl  toxic_model_metadata.json
assets/scripts/: experiments.py
infrastructure/: cloudwatch.tf  dynamodb.tf  ec2.tf  providers.tf  rds.tf  s3.tf  security_groups.tf  variables.tf
infrastructure/modules/docker_deployment/: main.tf  variables.tf
src/core/: __init__.py  asset_resolution.py  aws.py  aws_utils.py  base_logger.py  load_config.py  logger.py  logging_config.py  pyproject.toml
src/fastapi_backend/: Dockerfile  main.py  pyproject.toml
src/fastapi_backend/utils/: middleware.py  model_loader.py  moderation.py  schemas.py
src/sklearn_training/: Dockerfile  pyproject.toml  train_model.py
src/sklearn_training/utils/: constants.py  data_loader.py  experiment_tracking.py  feature_engineering.py  memory.py  model_evaluation.py  preprocess.py  validation.py
src/streamlit_frontend/: Dockerfile  app.py  pyproject.toml
src/streamlit_monitoring/: Dockerfile  app.py  pyproject.toml
src/streamlit_monitoring/utils/: data_loader.py
tests/: conftest.py  test_fastapi_backend.py  test_sklearn_training.py
tests/fastapi_backend/: __init__.py  test_main.py
tests/sklearn_training/: __init__.py  conftest.py  test_experiment_tracking.py  test_feature_engineering.py  test_model_evaluation.py  test_preprocess.py  test_train_model.py  test_validation.py
tests/streamlit_frontend/: __init__.py  test_app.py
tests/streamlit_monitoring/: __init__.py  test_app.py
