[project]
name = "toxic-comments-monorepo"
version = "0.1.0"
description = "Workspace for toxic comment analysis MLOps project"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "pre-commit",
    "ipykernel",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "anyio",
    "httpx"
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/fastapi_backend", 
    "src/sklearn_training",
    "src/streamlit_frontend",
    "src/streamlit_monitoring"
]
