[project]
name = "toxic-comments-core"
version = "0.1.0"
description = "Shared utilities for toxic comment analysis"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pyyaml",
    "boto3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["src.core*"]